# GMvpn2

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  PRIVACY.md  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: android-apk-bug-report.yml  android-tester-feedback.yml
.github/workflows/: android-aar.yml  android-github-apk-release.yml  android-release.yml  core.yml  shared.yml
clients/: README.md
clients/android/: .gitignore  README.md  gradle.properties  settings.gradle.kts
clients/android/app/: build.gradle.kts  proguard-rules.pro
clients/android/app/libs/: .gitkeep
clients/android/app/src/debug/: AndroidManifest.xml
clients/android/app/src/main/: AndroidManifest.xml
clients/android/app/src/main/jniLibs/: .gitkeep
clients/android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml
clients/android/gradle/: libs.versions.toml
core/: Makefile  README.md  VERSIONS.md  go.mod  go.sum
core/gmvpn/: contract_test.go  doc.go  tunnel.go  tunnel_test.go
core/gmvpn/testdata/configs/: shadowsocks.json  trojan_grpc.json  vless_reality.json  vmess_ws_tls.json
core/tun2socks/: bridge.go  bridge_test.go  socks5_udp.go  socks5_udp_test.go
docs/: agent-handoff.md  android-device-validation.md  android-network-validation-bench.md  android-play-compliance-and-validation.md  android-release-signing.md  android-v1-rc-notes.md  android-v1-validation-checklist.md  android-v1.1-rc-readiness.md  architecture.md  connection-runtime-wiring-plan.md  connection-state-audit.md  connection-state-physical-smoke-plan.md  connection-state-physical-smoke-results.md  import-failure-blocker-investigation.md  local-proxy-exposure-hardening-plan.md  local-proxy-lifecycle-retest-plan.md  premium-ui-plan.md  premium-ui-reference-map.md  product-direction.md  production-readiness.md  release-roadmap.md  security-review-001.md  stage4-ui-adoption-readiness-plan.md  v1.0.1-roadmap.md  v1.1-roadmap.md
docs/adr/: 0001-rust-shared-core.md  0002-android-first-gomobile.md  0003-uniffi-bindings.md  0004-xray-core-pin.md  0005-connection-orchestrator-and-transport-override.md
docs/memory/: pending-decisions.md  platform-notes.md  project-context.md  repo-defaults.md
docs/release-notes/: android-v1.1.0-rc.2.md
schemas/: profile.schema.json  routing.schema.json  subscription.schema.json
scripts/: build-android-libs.sh  check-android-16kb-elf-alignment.sh  collect-android-diagnostics.sh
scripts/validation/: preflight-windows.ps1  run-network-validation-windows.ps1
shared/: Cargo.toml  Makefile
shared/gmvpn-core/: Cargo.toml
shared/gmvpn-core/examples/: dump_configs.rs
shared/gmvpn-core/src/: error.rs  lib.rs  profile.rs  subscription.rs  uri.rs  xray.rs
shared/gmvpn-core/src/uri/: mod.rs  shadowsocks.rs  trojan.rs  vless.rs  vmess.rs
shared/gmvpn-ffi/: Cargo.toml
shared/gmvpn-ffi/src/: conv.rs  dto.rs  error.rs  lib.rs
(+70 files in other folders)
