[workspace]
resolver = "2"
members = [
    "gmvpn-core",
    "gmvpn-ffi",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/GronGM/GMvpn2"

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
too_many_lines = "allow"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
percent-encoding = "2"
uniffi = { version = "0.31", features = ["cli"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
