[package]
name = "gmvpn-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared domain logic for GMvpn2: profiles, subscriptions, URI parsers, routing."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
percent-encoding = { workspace = true }
