[package]
name = "gmvpn-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "FFI surface for GMvpn2 clients. UniFFI bindings will be added when mobile work starts."

[lib]
# `rlib` for in-workspace consumers; cdylib/staticlib are enabled per build
# profile when producing platform artifacts. Keeping both off by default
# avoids forcing linker config on contributors who only run `cargo test`.
crate-type = ["rlib"]

[lints]
workspace = true

[dependencies]
gmvpn-core = { path = "../gmvpn-core" }
serde_json = { workspace = true }
thiserror = { workspace = true }
