[package]
name = "gmvpn-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "UniFFI boundary for GMvpn2 clients (Kotlin/Swift/Python)."

[lib]
# cdylib for mobile linking, staticlib for C-ABI targets, rlib so the
# workspace tests keep working.
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[lints]
workspace = true

[dependencies]
gmvpn-core = { path = "../gmvpn-core" }
serde_json = { workspace = true }
thiserror = { workspace = true }
uniffi = { workspace = true }
